# github-protector

./: .env.example  .gitignore  README.md  pyproject.toml
github_protector/: README.md  cli.py
