[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-protector"
version = "0.1.0"
authors = [
  { name="Ishan Dutta", email="ishandutta2007@gmail.com" },
]
description = "A CLI tool to protect GitHub branches via the Admin API"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "python-dotenv",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
github-protect = "github_protector.cli:main"
